sandbox/output
GildedRoseTest.java:42: error: cannot find symbol
            GildedRose.updateItemsQualityAndSellIn(items);
                      ^
  symbol:   method updateItemsQualityAndSellIn(List<Item>)
  location: class GildedRose
1 error
